--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div> 
+            <div class="logo-main">
                 <img alt="img" src="../logo/TRAVELLING ON TWO WHEELS/logomarca/LOGO TRAVEL comp.png" width=250 height=250 >
             </div>
             <div class="menu">
@@ -69,10 +69,11 @@
 
     <footer  class="barra-negra">
         <section class="info">
-            <a class="menu-item"  href="./nosotros.html">Nosotros</a>
-            <a class="menu-item"  href="./contacto.html">Contacto</a>            
-        </section>
-        
+            <a class="menu-item"  href="./pages/nosotros.html">Nosotros</a></li>
+            <a class="menu-item"  href="./pages/contacto.html">Contacto</a></li>
+        </section> 
+
+
         <section class="redes">
             <label class="seguinos"  href="#">Seguinos</label>
             <a title="link" href="https://www.instagram.com">
@@ -89,7 +90,7 @@
             </a>
         </section>
 
-        <img src="../images/fondos/fondo_inferior1.jpg" height="100%" width="200px" alt="tipito">
+        <img class="img-fondo" src="images/fondos/fondo_inferior1.jpg" height="100%" width="200px" alt="tipito">
     </footer>
 </body>
 </html>
