--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div> 
+            <div class="logo-main"> 
                 <img alt="imagen" src="logo/TRAVELLING ON TWO WHEELS/logomarca/LOGO TRAVEL comp.png" width=250 height=250 >
             </div>
             <div class="menu">
@@ -34,8 +34,7 @@
         <section class="info">
             <a class="menu-item"  href="./pages/nosotros.html">Nosotros</a></li>
             <a class="menu-item"  href="./pages/contacto.html">Contacto</a></li>
-        </section>
-        
+        </section> 
 
 
         <section class="redes">
@@ -54,7 +53,7 @@
             </a>
         </section>
 
-        <img src="images/fondos/fondo_inferior1.jpg" height="100%" width="200px" alt="tipito">
+        <img class="img-fondo" src="images/fondos/fondo_inferior1.jpg" height="100%" width="200px" alt="tipito">
     </footer>
 
 </body>
