--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <!--NOMBRE DEL DOCUMENTO-->
     <title>Traveling on two wheels</title>
     <link href="css/site.css" rel="stylesheet"  type="text/css"/>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
 </head>
 
 
@@ -39,16 +43,16 @@
 
         <section class="redes">
             <label class="seguinos"  href="#">Seguinos</label>
-            <a title="link" href="https://www.instagram.com">
+            <a title="link" href="https://www.instagram.com" target="_blank">
                 <div class="redes-item redes-ig"></div>
             </a>
-            <a title="link" href="https://www.facebook.com">
+            <a title="link" href="https://www.facebook.com" target="_blank">
                 <div class="redes-item redes-fb"></div>
             </a>
-            <a title="link" href="https://www.twitter.com">
+            <a title="link" href="https://www.twitter.com" target="_blank">
                 <div class="redes-item redes-x"></div>
             </a>
-            <a title="link" href="https://www.youtube.com/">
+            <a title="link" href="https://www.youtube.com/" target="_blank">
                 <div class="redes-item redes-yt"></div>
             </a>
         </section>
